--- a/conda/environments/all_cuda-129_arch-x86_64.yaml
+++ b/conda/environments/all_cuda-129_arch-x86_64.yaml
@@ -42,7 +42,7 @@ dependencies:
 - libcufile-dev
 - libcurand-dev
 - libkvikio==25.8.*,>=0.0.0a0
-- libnvcomp==4.2.0.11
+- libnvcomp-dev==4.2.0.11
 - librdkafka>=2.8.0,<2.9.0a0
 - librmm==25.8.*,>=0.0.0a0
 - make
