--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -1268,6 +1268,7 @@ dependencies:
       - output_types: conda
         packages:
           - cudf-polars==25.8.*,>=0.0.0a0
+          - nvidia-ml-py
   depends_on_narwhals:
     common:
       - output_types: [conda, requirements, pyproject]
