Add conda dependency on nvidia-ml-py.

--- a/conda/recipes/cudf-polars/recipe.yaml
+++ b/conda/recipes/cudf-polars/recipe.yaml
@@ -47,6 +47,7 @@ requirements:
     - setuptools
     - cuda-version =${{ cuda_version }}
   run:
+    - nvidia-ml-py
     - python
     - pylibcudf =${{ version }}
     - polars >=1.28,<1.32
