--- a/conda/environments/all_cuda-129_arch-x86_64.yaml
+++ b/conda/environments/all_cuda-129_arch-x86_64.yaml
@@ -42,6 +42,7 @@ dependencies:
 - libcufile-dev
 - libcurand-dev
 - libkvikio==25.8.*,>=0.0.0a0
+- libnvcomp-dev==4.2.0.11
 - librdkafka>=2.8.0,<2.9.0a0
 - librmm==25.8.*,>=0.0.0a0
 - make
@@ -59,7 +60,6 @@ dependencies:
 - numba>=0.59.1,<0.62.0a0
 - numpy>=1.23,<3.0a0
 - numpydoc
-- nvcomp==4.2.0.11
 - nvidia-ml-py
 - nvtx>=0.2.1
 - openpyxl
