--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -573,6 +573,7 @@ add_library(
   src/io/utilities/trie.cu
   src/jit/cache.cpp
   src/jit/parser.cpp
+  src/jit/row_ir.cpp
   src/jit/runtime_support.cpp
   src/jit/util.cpp
   src/join/conditional_join.cu
