Materialize tables in the experimental Parquet reader (#19308)
Contributes to #17896. Completes #18011

This PR implements table materialization functions in the experimental parquet reader. The experimental reader now derives from the base parquet reader and only overloads the necessary functions reusing the base functions wherever possible.

Most of the functions reimplemented by the experimental reader are also mostly identical with the differences from the base reader mentioned in the comments

Authors:
  - Muhammad Haseeb (https://github.com/mhaseeb123)

Approvers:
  - Nghia Truong (https://github.com/ttnghia)
  - Vukasin Milovanovic (https://github.com/vuule)

URL: https://github.com/rapidsai/cudf/pull/19308

--- a/cpp/tests/CMakeLists.txt
+++ b/cpp/tests/CMakeLists.txt
@@ -333,8 +333,12 @@ ConfigureTest(
   PERCENT 30
 )
 ConfigureTest(
-  HYBRID_SCAN_TEST io/experimental/hybrid_scan_common.cpp
-  io/experimental/hybrid_scan_filters_test.cpp io/parquet_common.cpp io/parquet_test.cpp
+  HYBRID_SCAN_TEST
+  io/experimental/hybrid_scan_common.cpp
+  io/experimental/hybrid_scan_filters_test.cpp
+  io/experimental/hybrid_scan_test.cpp
+  io/parquet_common.cpp
+  io/parquet_test.cpp
 )
 ConfigureTest(
   JSON_TEST io/json/json_test.cpp io/json/json_chunked_reader.cu
