--- a/python/pylibcudf/pylibcudf/libcudf/nvtext/CMakeLists.txt
+++ b/python/pylibcudf/pylibcudf/libcudf/nvtext/CMakeLists.txt
@@ -1,5 +1,5 @@
 # =============================================================================
-# Copyright (c) 2022-2025, NVIDIA CORPORATION.
+# Copyright (c) 2025, NVIDIA CORPORATION.
 #
 # Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
 # in compliance with the License. You may obtain a copy of the License at
@@ -12,19 +12,12 @@
 # the License.
 # =============================================================================
 
-set(cython_sources
-    aggregation.pyx binaryop.pyx copying.pyx datetime.pyx expressions.pyx labeling.pyx reduce.pyx
-    replace.pyx round.pyx stream_compaction.pyx types.pyx unary.pyx
-)
+set(cython_sources stemmer.pyx)
 
 set(linked_libraries cudf::cudf)
+
 rapids_cython_create_modules(
   CXX
   SOURCE_FILES "${cython_sources}"
-  LINKED_LIBRARIES "${linked_libraries}" ASSOCIATED_TARGETS cudf MODULE_PREFIX cpp
+  LINKED_LIBRARIES "${linked_libraries}" ASSOCIATED_TARGETS cudf MODULE_PREFIX cpp_nvtext_
 )
-
-add_subdirectory(nvtext)
-add_subdirectory(io)
-add_subdirectory(lists)
-add_subdirectory(strings)
