Fix clang-tools version pinning
We specify this in two places, use the exact pin rather than fuzzy pin
in both.

--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -563,7 +563,7 @@ dependencies:
       - output_types: conda
         packages:
           - clang==20.1.4
-          - clang-tools=20.1.4
+          - clang-tools==20.1.4
   clang_tidy:
     common:
       - output_types: conda
