--- a/conda/environments/all_cuda-129_arch-aarch64.yaml
+++ b/conda/environments/all_cuda-129_arch-aarch64.yaml
@@ -81,7 +81,7 @@ dependencies:
 - python-xxhash
 - python>=3.10,<3.14
 - pytorch>=2.4.0
-- rapids-build-backend>=0.3.0,<0.4.0.dev0
+- rapids-build-backend @ git+https://github.com/KyleFromNVIDIA/rapids-build-backend.git@write-git-commit-to-manifest-in
 - rapids-dask-dependency==25.10.*,>=0.0.0a0
 - rapids-logger==0.1.*,>=0.0.0a0
 - rich
