--- a/cpp/benchmarks/CMakeLists.txt
+++ b/cpp/benchmarks/CMakeLists.txt
@@ -262,6 +262,7 @@ ConfigureBench(
 ConfigureNVBench(
   GROUPBY_NVBENCH
   groupby/group_histogram.cpp
+  groupby/group_m2.cpp
   groupby/group_max.cpp
   groupby/group_max_multithreaded.cpp
   groupby/group_nunique.cpp
