--- a/conda/environments/all_cuda-129_arch-aarch64.yaml
+++ b/conda/environments/all_cuda-129_arch-aarch64.yaml
@@ -41,6 +41,7 @@ dependencies:
 - libcurand-dev
 - libkvikio==25.10.*,>=0.0.0a0
 - libnvcomp-dev==4.2.0.11
+- libnvjitlink-dev
 - librdkafka>=2.8.0,<2.9.0a0
 - librmm==25.10.*,>=0.0.0a0
 - make
