Don't enforce the rule in the UDFs notebook

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -150,6 +150,9 @@ extend-unsafe-fixes = [
 [tool.ruff.lint.per-file-ignores]
 # We use "== None" to demonstrate null handling in this notebook
 "docs/cudf/source/user_guide/missing-data.ipynb" = ["E711"]
+# We demonstrate UDFs where numba doesn't support `zip(..., strict=True)` (or
+# any keywords) and we don't want to litter demo notebooks with noqas
+"docs/cudf/source/user_guide/guide-to-udfs.ipynb" = ["B905"]
 # Lots of pytest implicitly injected attributes in conftest-patch.py
 "python/cudf/cudf/pandas/scripts/conftest-patch.py" = ["F821"]
 "python/cudf/cudf/pandas/scripts/*" = ["D"]
