Add overflow support for signed integers and decimals

--- a/cpp/tests/CMakeLists.txt
+++ b/cpp/tests/CMakeLists.txt
@@ -160,6 +160,7 @@ ConfigureTest(
   groupby/sum_of_squares_tests.cpp
   groupby/sum_scan_tests.cpp
   groupby/sum_tests.cpp
+  groupby/sum_with_overflow_tests.cpp
   groupby/tdigest_tests.cu
   groupby/var_tests.cpp
   GPUS 1
