Upgrade `gcc-toolset` for Java/JNI build to version 14 (#19500)
As RAPIDS is moving to gcc-14, we should upgrade the rest of the build system (Java/JNI) to match it.

This only changes in the build and test for Java/JNI, no implementation change is needed.

Build for `spark-rapids-jni` will not pass until https://github.com/NVIDIA/spark-rapids-jni/pull/3568 is merged. But merging this should not be blocked by it.

Authors:
  - Nghia Truong (https://github.com/ttnghia)

Approvers:
  - Bradley Dice (https://github.com/bdice)
  - Peixin (https://github.com/pxLi)

URL: https://github.com/rapidsai/cudf/pull/19500

--- a/java/ci/Dockerfile.rocky
+++ b/java/ci/Dockerfile.rocky
@@ -26,9 +26,9 @@ ARG TARGETPLATFORM=linux/amd64
 # multi-platform build with: docker buildx build --platform linux/arm64,linux/amd64 <ARGS> on either amd64 or arm64 host
 # check available official arm-based docker images at https://hub.docker.com/r/nvidia/cuda/tags (OS/ARCH)
 FROM --platform=$TARGETPLATFORM nvidia/cuda:$CUDA_VERSION-devel-rockylinux$OS_RELEASE
-ARG TOOLSET_VERSION=11
+ARG TOOLSET_VERSION=14
 ### Install basic requirements
-RUN dnf --enablerepo=powertools install -y  scl-utils gcc-toolset-${TOOLSET_VERSION} git zlib-devel maven tar wget patch ninja-build boost-devel
+RUN dnf --enablerepo=powertools install -y  scl-utils gcc-toolset-11 gcc-toolset-${TOOLSET_VERSION} git zlib-devel maven tar wget patch ninja-build boost-devel
 ## pre-create the CMAKE_INSTALL_PREFIX folder, set writable by any user for Jenkins
 RUN mkdir /usr/local/rapids /rapids && chmod 777 /usr/local/rapids /rapids
 
