--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -488,7 +488,7 @@ dependencies:
     common:
       - output_types: [conda, requirements, pyproject]
         packages:
-        - &numba-cuda-dep numba-cuda>=0.14.0,<0.15.0a0
+        - &numba-cuda-dep numba-cuda>=0.18.0,<0.19.0a0
   pyarrow_run:
     common:
       - output_types: [conda]
@@ -646,7 +646,7 @@ dependencies:
         matrices:
           - matrix: {cuda: "12.*"}
             packages: &run_pylibcudf_packages_all_cu12
-              - cuda-python>=12.6.2,<13.0a0
+              - cuda-python>=12.9.1,<13.0a0
           - {matrix: null, packages: *run_pylibcudf_packages_all_cu12}
   run_cudf:
     common:
@@ -671,18 +671,13 @@ dependencies:
         matrices:
           - matrix: {cuda: "12.*"}
             packages: &run_cudf_packages_all_cu12
-              - cuda-python>=12.6.2,<13.0a0
+              - cuda-python>=12.9.1,<13.0a0
           - {matrix: null, packages: *run_cudf_packages_all_cu12}
-      - output_types: conda
-        matrices:
-          - matrix: {cuda: "12.*"}
-            packages:
-              - &pynvjitlink_unsuffixed pynvjitlink>=0.0.0a0
       - output_types: [requirements, pyproject]
         matrices:
           - matrix: {cuda: "12.*"}
             packages:
-              - &numba-cuda-cu12-dep numba-cuda[cu12]>=0.14.0,<0.15.0a0
+              - &numba-cuda-cu12-dep numba-cuda[cu12]>=0.18.0,<0.19.0a0
           - matrix: # Fallback for no matrix
             packages:
               - *numba-cuda-cu12-dep
@@ -692,15 +687,9 @@ dependencies:
               cuda: "12.*"
               cuda_suffixed: "true"
             packages:
-              - pynvjitlink-cu12>=0.0.0a0
               - nvidia-cuda-nvcc-cu12
               - nvidia-cuda-nvrtc-cu12
-          - matrix:
-              cuda: "12.*"
-              cuda_suffixed: "false"
-            packages: &run_cudf_cu12_unsuffixed
-              - *pynvjitlink_unsuffixed
-          - {matrix: null, packages: *run_cudf_cu12_unsuffixed}
+          - {matrix: null, packages: []}
   run_cudf_polars:
     common:
       - output_types: [conda, requirements, pyproject]
@@ -783,10 +772,11 @@ dependencies:
           - matrix: {dependencies: "oldest"}
             packages:
               - numba==0.59.1
-              - numba-cuda==0.14.0
+              - numba-cuda==0.18.0
               - pandas==2.0.*
           - matrix: {dependencies: "latest"}
             packages:
+              - *numba-dep
               - pandas==2.3.1
           - matrix:
             packages:
