--- a/conda/environments/all_cuda-129_arch-aarch64.yaml
+++ b/conda/environments/all_cuda-129_arch-aarch64.yaml
@@ -27,7 +27,7 @@ dependencies:
 - cupy>=12.0.0
 - cxx-compiler
 - cython>=3.0.3
-- dask-cuda==25.8.*,>=0.0.0a0
+- dask-cuda==25.8.*
 - dlpack>=0.8,<1.0
 - doxygen=1.9.1
 - fastavro>=0.22.9
@@ -40,10 +40,10 @@ dependencies:
 - ipython
 - jupyter_client
 - libcurand-dev
-- libkvikio==25.8.*,>=0.0.0a0
+- libkvikio==25.8.*
 - libnvcomp-dev==4.2.0.11
 - librdkafka>=2.8.0,<2.9.0a0
-- librmm==25.8.*,>=0.0.0a0
+- librmm==25.8.*
 - make
 - mmh3
 - moto>=4.0.8
@@ -83,10 +83,10 @@ dependencies:
 - python>=3.10,<3.14
 - pytorch>=2.4.0
 - rapids-build-backend>=0.3.0,<0.4.0.dev0
-- rapids-dask-dependency==25.8.*,>=0.0.0a0
-- rapids-logger==0.1.*,>=0.0.0a0
+- rapids-dask-dependency==25.8.*
+- rapids-logger==0.1.*
 - rich
-- rmm==25.8.*,>=0.0.0a0
+- rmm==25.8.*
 - s3fs>=2022.3.0
 - scikit-build-core>=0.10.0
 - scipy
