--- a/python/cudf/pyproject.toml
+++ b/python/cudf/pyproject.toml
@@ -106,7 +106,9 @@ filterwarnings = [
     # PerformanceWarning from cupy warming up the JIT cache
     "ignore:Jitify is performing a one-time only warm-up to populate the persistent cache:cupy._util.PerformanceWarning",
     # Ignore numba PEP 456 warning specific to arm machines
-    "ignore:FNV hashing is not implemented in Numba.*:UserWarning"
+    "ignore:FNV hashing is not implemented in Numba.*:UserWarning",
+    # Allow running UDF tests on older architectures
+    "ignore:.*NVRTC log messages whilst compiling.*:UserWarning",
 ]
 markers = [
     "spilling: mark benchmark a good candidate to run with `CUDF_SPILL=ON`",
