--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -661,6 +661,7 @@ add_library(
   src/reductions/std.cu
   src/reductions/sum.cu
   src/reductions/sum_of_squares.cu
+  src/reductions/sum_with_overflow.cu
   src/reductions/var.cu
   src/replace/clamp.cu
   src/replace/nans.cu
