--- a/python/pylibcudf/pyproject.toml
+++ b/python/pylibcudf/pyproject.toml
@@ -44,6 +44,8 @@ test = [
     "mmh3",
     "nanoarrow",
     "pandas",
+    "pyarrow>=14.0.0,<20.0.0a0,!=17.0.0; platform_machine=='aarch64'",
+    "pyarrow>=14.0.0,<20.0.0a0; platform_machine=='x86_64'",
     "pytest",
     "pytest-cov",
     "pytest-xdist",
