--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -66,6 +66,7 @@ files:
     output: none
     includes:
       - cuda_version
+      - depends_on_cupy
       - py_version
       - test_python_common
       - test_python_cudf_common
@@ -835,6 +836,8 @@ dependencies:
           - mmh3
           - nanoarrow
           - hypothesis>=6.131.7
+          - *numba_cuda
+          - *numba
           - pandas
       - output_types: conda
         packages:
