--- a/python/pylibcudf/pyproject.toml
+++ b/python/pylibcudf/pyproject.toml
@@ -43,6 +43,8 @@ test = [
     "hypothesis>=6.131.7",
     "mmh3",
     "nanoarrow",
+    "numba-cuda>=0.14.0,<0.15.0a0",
+    "numba>=0.59.1,<0.62.0a0",
     "pandas",
     "pyarrow>=14.0.0,<20.0.0a0,!=17.0.0; platform_machine=='aarch64'",
     "pyarrow>=14.0.0,<20.0.0a0; platform_machine=='x86_64'",
