--- a/python/pylibcudf/pyproject.toml
+++ b/python/pylibcudf/pyproject.toml
@@ -39,6 +39,7 @@ classifiers = [
 
 [project.optional-dependencies]
 test = [
+    "cupy-cuda12x>=12.0.0",
     "fastavro>=0.22.9",
     "hypothesis>=6.131.7",
     "mmh3",
