--- a/python/pylibcudf/pyproject.toml
+++ b/python/pylibcudf/pyproject.toml
@@ -44,7 +44,7 @@ test = [
     "hypothesis>=6.131.7",
     "mmh3",
     "nanoarrow",
-    "numba-cuda>=0.18.0,<0.19.0a0",
+    "numba-cuda[cu12]>=0.18.0,<0.19.0a0",
     "numba>=0.60.0,<0.62.0a0",
     "pandas",
     "pyarrow>=14.0.0,<20.0.0a0,!=17.0.0; platform_machine=='aarch64'",
