--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -638,6 +638,7 @@ add_library(
   src/reductions/nth_element.cu
   src/reductions/nunique.cu
   src/reductions/product.cu
+  src/reductions/quantile.cu
   src/reductions/reductions.cpp
   src/reductions/scan/rank_scan.cu
   src/reductions/scan/ewm.cu
