--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -359,7 +359,7 @@ jobs:
       date: ${{ inputs.date }}
       sha: ${{ inputs.sha }}
       node_type: "gpu-l4-latest-1"
-      container_image: "rapidsai/ci-conda:cuda12.9.0-ubuntu24.04-py3.12"
+      container_image: "rapidsai/citestwheel:25.10-cuda12.9.1-ubuntu24.04-py3.13"
       script: ci/cudf_pandas_scripts/pandas-tests/run.sh pr
       file_to_upload: pr-25.10.00-results.json
     # with:
