--- a/conda/recipes/pylibcudf/recipe.yaml
+++ b/conda/recipes/pylibcudf/recipe.yaml
@@ -73,7 +73,7 @@ requirements:
     - cuda-python >=12.9.1,<13.0a0
     - nvtx >=0.2.1
     - packaging
-  run_constrained:
+  run_constraints:
     - numpy >=1.23,<3.0a0
     - pyarrow>=14.0.0,<20.0.0a0
   ignore_run_exports:
