[FEA] Switch to NVIDIA's JITIFY2 (#19561)
This merge request switches CUDF's JITIFY2 upstream from the RAPIDSAI fork (https://github.com/rapidsai/jitify/tree/jitify2) to the NVIDIA fork (https://github.com/NVIDIA/jitify/tree/jitify2).

The NVIDIA fork has newer features & improvements, including NVTX ranges, which are needed to properly benchmark each compilation/cache step of a specific  JIT workload. This was previously impossible to track accurately and concisely.


Follows up: https://github.com/rapidsai/cudf/issues/18023

Authors:
  - Basit Ayantunde (https://github.com/lamarrr)
  - Vyas Ramasubramani (https://github.com/vyasr)

Approvers:
  - Bradley Dice (https://github.com/bdice)
  - Muhammad Haseeb (https://github.com/mhaseeb123)
  - Vyas Ramasubramani (https://github.com/vyasr)

URL: https://github.com/rapidsai/cudf/pull/19561

--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -569,6 +569,7 @@ dependencies:
               - cuda-nvrtc-dev
               - cuda-nvtx-dev
               - libcurand-dev
+              - libnvjitlink-dev
       - output_types: conda
         matrices:
           - matrix:
