--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -726,6 +726,7 @@ dependencies:
       - output_types: [conda, requirements, pyproject]
         packages:
           - nvidia-ml-py
+          - packaging
           - polars>=1.28,<1.32
     specific:
       - output_types: [requirements, pyproject]
