--- a/python/cudf_polars/pyproject.toml
+++ b/python/cudf_polars/pyproject.toml
@@ -20,6 +20,7 @@ license = { text = "Apache-2.0" }
 requires-python = ">=3.10"
 dependencies = [
     "nvidia-ml-py",
+    "packaging",
     "polars>=1.28,<1.32",
     "pylibcudf==25.10.*,>=0.0.0a0",
     "typing-extensions; python_version < '3.11'",
