--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -362,6 +362,7 @@ jobs:
       container_image: "rapidsai/citestwheel:25.10-cuda12.9.1-ubuntu24.04-py3.13"
       script: ci/cudf_pandas_scripts/pandas-tests/run.sh pr
       file_to_upload: ./artifacts/pr-25.10.00-results.json
+      artifact-name: pr-results.json
     # with:
     #   matrix_filter: '[{"ARCH": "amd64", "PY_VER": "3.13", "CUDA_VER": "12.9.1", "LINUX_VER": "ubuntu24.04", "GPU": "l4", "DRIVER": "latest", "DEPENDENCIES": "newest"}]'
     #   build_type: pull-request
