--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -684,7 +684,8 @@ dependencies:
       - output_types: [conda, requirements, pyproject]
         packages:
           - cachetools
-          - &numba numba>=0.60.0,<0.62.0a0
+          # TODO: Revert to numba>=0.60.0,<0.62.0a0 once https://github.com/NVIDIA/numba-cuda/pull/403 is released.
+          - &numba numba>=0.61.0,<0.62.0a0
           - nvtx>=0.2.1
           - packaging
           - rich
@@ -803,7 +804,8 @@ dependencies:
         matrices:
           - matrix: {dependencies: "oldest"}
             packages:
-              - numba==0.60.0
+              # TODO: Revert to numba==0.60.0 once https://github.com/NVIDIA/numba-cuda/pull/403 is released.
+              - numba==0.61.0
               - pandas==2.0.*
               - numba-cuda==0.19.0
           - matrix: {dependencies: "latest"}
