--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -354,15 +354,15 @@ jobs:
     uses: rapidsai/shared-workflows/.github/workflows/custom-job.yaml@branch-25.10
     if: fromJSON(needs.changed-files.outputs.changed_file_groups).test_python || fromJSON(needs.changed-files.outputs.changed_file_groups).test_cudf_pandas
     with:
-      build_type: pull-request
+      build_type: nightly
       branch: ${{ inputs.branch }}
       date: ${{ inputs.date }}
       sha: ${{ inputs.sha }}
       node_type: "gpu-h100-latest-1"
       container_image: "rapidsai/citestwheel:25.10-cuda12.9.1-ubuntu24.04-py3.13"
-      script: ci/cudf_pandas_scripts/pandas-tests/run.sh pr
-      file_to_upload: ./artifacts/pr-25.10.00-results.json
-      artifact-name: pr-results.json
+      script: ci/cudf_pandas_scripts/pandas-tests/run.sh main
+      file_to_upload: ./artifacts/main-results.json
+      artifact-name: main-results.json
     # with:
     #   matrix_filter: '[{"ARCH": "amd64", "PY_VER": "3.13", "CUDA_VER": "12.9.1", "LINUX_VER": "ubuntu24.04", "GPU": "l4", "DRIVER": "latest", "DEPENDENCIES": "newest"}]'
     #   build_type: pull-request
