--- a/python/libcudf/CMakeLists.txt
+++ b/python/libcudf/CMakeLists.txt
@@ -16,6 +16,8 @@ cmake_minimum_required(VERSION 3.30.4 FATAL_ERROR)
 
 include(../../cmake/rapids_config.cmake)
 include(rapids-cpm)
+include(rapids-cuda)
+rapids_cuda_init_architectures(libcudf-python)
 rapids_cpm_init()
 
 project(
