--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -918,8 +918,8 @@ target_include_directories(
          "$<BUILD_INTERFACE:${JITIFY_INCLUDE_DIR}>"
          "$<BUILD_INTERFACE:${CUDF_SOURCE_DIR}/include>"
          "$<BUILD_INTERFACE:${CUDF_GENERATED_INCLUDE_DIR}/include>"
-         "$<BUILD_INTERFACE:${croaring_C_INCLUDE_DIR}>"
-         "$<BUILD_INTERFACE:${croaring_CPP_INCLUDE_DIR}>"
+         "$<BUILD_INTERFACE:${croaring_INCLUDE_DIR}/cpp>"
+         "$<BUILD_INTERFACE:${croaring_INCLUDE_DIR}/include>"
   PRIVATE "$<BUILD_INTERFACE:${CUDF_SOURCE_DIR}/src>"
           "$<BUILD_INTERFACE:${nanoarrow_SOURCE_DIR}/src>"
           "$<BUILD_INTERFACE:${FlatBuffers_SOURCE_DIR}/include>"
