--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -364,7 +364,7 @@ jobs:
       branch: ${{ inputs.branch }}
       date: ${{ inputs.date }}
       sha: ${{ inputs.sha }}
-      node_type: "gpu-h100-latest-1"
+      node_type: "gpu-a100-latest-1"
       container_image: "rapidsai/citestwheel:25.10-cuda12.9.1-ubuntu24.04-py3.13"
       script: ci/cudf_pandas_scripts/pandas-tests/run.sh pr
       file_to_upload: ./artifacts/pr-results.json
